-- 0.2
	- Remove argument, --qt. If puding has not taken an argument, it starts
	Qt gui as default.

-- 0.1 (2009-10-14)
	- Update translations.
	- Add German translations.
	- If available space size is not enough, don't start to create image
	process.
	- Add usb disk informations to confirm dialog.

-- 0.0.92 (2009-10-12)
	- Rewrite __copyImage function. now it's more simple.
	- Fix progressBar error.
	- Update translations.
	- Add Dutch translation.
	- Move getNumberOfFiles function to pardusTools.py.

-- 0.0.91
	- Fix some functions.

-- 0.0.5
	- GFXTheme support.

-- 0.0.2
	- Gettext support.
	- Arguments instead of raw_input.

-- 0.0.1
	- First version.